--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div id="map"></div>
         <script src="js/index.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh15L6ZQVrZVsMjwAhb_3-X6bbgpSGtQk&callback=initMap"
+      <script src="https://maps.googleapis.com/maps/api/js?key=""&callback=initMap"
       async defer></script>
 </body>
 </html>
