--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="title">Store Locator</div>
     <div class="search-container">
         <div class="search">
-            <input type="text" placeholder="Enter zip">
-            <i class="fas fa-search"></i>
+            <input type="text" id="zip-code-input" placeholder="Enter zip">
+            <i class="fas fa-search" onClick="searchStores()"></i>
         </div>
     </div>
     <div class="stores-list-container">
@@ -35,7 +35,7 @@
     </div>
     <div id="map"></div>
         <script src="js/index.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=""&callback=initMap"
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcWLWxqkePW6oMf1ZDlh5mmOBsW7vEuRI&callback=initMap"
       async defer></script>
 </body>
 </html>
